# code-swap

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  billing.py  chat.py  compare.py  crew.py  files.py  gdpr.py  keys.py  models.py  usage.py  workspaces.py
backend/app/cli/: compare.py  config.py  conversation.py  crew.py  crew_display.py  engine.py  git_context.py  installer.py  main.py  output.py  picker.py  repl.py  sessions.py  smart_router.py  tool_executor.py  tools.py
backend/app/core/: auth.py  config.py  security.py
backend/app/db/: base.py
backend/app/models/: __init__.py  base.py  entities.py  enums.py
backend/app/schemas/: auth.py  billing.py  chat.py  crew.py  files.py  keys.py  models.py  usage.py  workspaces.py
backend/app/services/: anthropic_adapter.py  billing_service.py  chat_service.py  crew_service.py  file_ingest_service.py  gdpr_service.py  model_catalog_service.py  notification_service.py  openai_adapter.py  openrouter_adapter.py  provider_service.py  providers_base.py  storage_service.py  usage_service.py  workspace_access.py
backend/app/workers/: model_sync.py
backend/tests/: conftest.py  test_billing.py  test_chat_stream.py  test_compare_stream.py  test_key_persistence.py  test_keys.py  test_models.py  test_workspace_permissions.py  test_workspaces.py
frontend/: index.html  package-lock.json  package.json  (+2 more)
(+19 files in other folders)
