[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codex-wrapper-backend"
version = "0.2.0"
description = "BYOK AI CLI — access any model via OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.29.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.1.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.1",
  "email-validator>=2.1.0",
  "httpx>=0.27.0",
  "cryptography>=42.0.0",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.2.0",
  "redis>=5.0.0",
  "arq>=0.25.0",
  "boto3>=1.34.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "orjson>=3.10.0",
  "sentry-sdk[fastapi]>=2.0.0",
  "stripe>=10.0.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "pyyaml>=6.0.0",
  "prompt-toolkit>=3.0.0",
  "InquirerPy>=0.3.4",
]

[project.scripts]
code-swap = "app.cli.main:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
